<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/add_contact_dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_box_bg">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civProfileImg"
            android:layout_width="@dimen/user_profile_image_height_width"
            android:layout_height="@dimen/user_profile_image_height_width"
            android:layout_marginTop="@dimen/margin_twenty"
            android:elevation="@dimen/margin_ten"
            android:src="@mipmap/ic_launcher" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUploadPicture"
            style="@style/StyleTextViewLabels"
            android:layout_gravity="center"
            android:text="@string/upload_picture" />

        <com.google.android.material.textfield.TextInputLayout style="@style/StyleTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/StyleInputFieldsEditText"
                android:hint="@string/name"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/StyleTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                style="@style/StyleInputFieldsEditText"
                android:hint="@string/phone"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/StyleTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBirthday"
                style="@style/StyleInputFieldsEditText"
                android:hint="@string/birthday" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_ten"
            android:background="@color/teal_200"
            android:elevation="@dimen/margin_five"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/buttons_text_size" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/margin_ten"
        android:src="@drawable/ic_cancel" />

</FrameLayout>